# logic-synthesis-tutorial

./: 00 Introduction.pptx  A glimpse of Logic Synthesis tool implementation.pptx  README  synthesis_optimization_flow.html
01 boolean algebra - truthtable/: 01 boolean algebra - truthtable.pptx
02 boolean algebra - BDD & SAT/: 02 - BDD & SAT.pptx  z3-tutorial.ipynb
02 boolean algebra - BDD & SAT/.ipynb_checkpoints/: z3_tutorial-checkpoint.ipynb
02 boolean algebra - BDD & SAT/cudd-toturial/: CMakeLists.txt
02 boolean algebra - BDD & SAT/cudd-toturial/fig/: bdt_and2.dot  bdt_maj3.dot  bdt_xor2.dot  robdd_1.dot  robdd_maj3.dot
02 boolean algebra - BDD & SAT/cudd-toturial/src/: answer.h  basic.cpp  nqueen.h  nqueens.cpp
03 network representation - AIG/: 03 - logic network representation.pptx
03 network representation - AIG/mockturtle-tutorial/: CMakeLists.txt  aig.cpp  block.cpp  convert.cpp  klut.cpp
03 network representation - AIG/mockturtle-tutorial/.cache/clangd/index/: aig.cpp.5CDAAA4C5A0F55FF.idx  block.cpp.2D97E6D04010BF68.idx  convert.cpp.39E6D1A8A6BCACDE.idx  klut.cpp.DFE3B0A2509850C7.idx
04 mapper/: 04 - mapper.pptx
